<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="#00FAF6F6"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow512" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="75dp"
        android:layout_height="62dp"
        android:backgroundTint="#FF255AF5"
        android:tint="#007A1818"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/SignOut"
        android:textColor="@color/Blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="149dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/ChangeUsername"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginTop="156dp"
        android:backgroundTint="@color/white"
        android:text="@string/ChangePassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button11"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/RateApplication"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginBottom="228dp"
        android:backgroundTint="@color/white"
        android:text="@string/InviteFriends"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>