<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#00FAF6F6"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="65dp"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/button"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#FFFBFB"
        android:text="@string/signup"
        android:textSize="20sp"
        android:onClick="onClick2"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="59dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="84dp"
        android:background="#111111"
        android:backgroundTint="#FFFBFB"
        android:onClick="onClick"
        android:text="@string/signin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow512" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="168dp"
        android:layout_height="155dp"
        android:contentDescription="@string/paste_as_plain_text"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@drawable/headphones" />

</androidx.constraintlayout.widget.ConstraintLayout>