<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBlue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="74dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        tools:srcCompat="@drawable/gmail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#00FAF6F6"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow512" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="75dp"
        android:layout_height="62dp"
        android:backgroundTint="#FF255AF5"
        android:tint="#007A1818"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <Button
        android:id="@+id/buttonn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/Continue"
        android:onClick="change6"
        android:textColor="@color/Blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="159dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:text="@string/ShareVia"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="248dp"
        android:backgroundTint="@color/skyBlue"
        android:tint="@color/white"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeShareDrawable" />

    <Button
        android:id="@+id/button6"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/white"
        android:text="@string/facebook"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/whatsapp"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/button8"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/gmail"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.218" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/fbi" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="70dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/paste_as_plain_text"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/what" />

    <Button
        android:id="@+id/button14"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/CHATBOT"
        android:onClick="Chatting"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.48" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/sym_action_chat" />


</androidx.constraintlayout.widget.ConstraintLayout>